--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@react-three/drei": "^10.4.2",
     "@react-three/fiber": "^9.1.4",
     "@tailwindcss/vite": "^4.1.10",
+    "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.18.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "swiper": "^11.2.10",
     "tailwindcss": "^4.1.10",
     "three": "^0.178.0"
   },
